# geoinquire-va2-34-2

./: .gitignore  LICENSE  README.md
.github/workflows/: github-repo-stats.yml
Tool-HazardMap/Code/: Hazard-v0.py  Hazard.py  HazardProcessor-v0.py  HazardProcessor.py  pyproject.toml
Tool-HazardMap/Data/: MeanMaxDayRain.asc  StdMaxDayRain.txt  input_variables.xlsx  input_variables.yaml
norwegian-geotechnical-institute/geoinquire-va2-34-2/: README.md
norwegian-geotechnical-institute/geoinquire-va2-34-2/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
norwegian-geotechnical-institute/geoinquire-va2-34-2/ghrs-data/snapshots/: 2025-08-28_132856_views_clones_series_fragment.csv  2025-08-28_230534_views_clones_series_fragment.csv  2025-08-29_230529_views_clones_series_fragment.csv  2025-08-30_230521_views_clones_series_fragment.csv  2025-08-31_230531_views_clones_series_fragment.csv  2025-09-01_230530_top_paths_snapshot.csv  2025-09-01_230530_views_clones_series_fragment.csv  2025-09-02_230458_views_clones_series_fragment.csv  2025-09-03_230506_views_clones_series_fragment.csv  2025-09-04_230523_views_clones_series_fragment.csv  2025-09-05_230518_views_clones_series_fragment.csv  2025-09-06_230457_top_referrers_snapshot.csv  2025-09-06_230457_views_clones_series_fragment.csv  2025-09-07_230456_views_clones_series_fragment.csv  2025-09-08_230542_views_clones_series_fragment.csv  2025-09-09_230528_views_clones_series_fragment.csv  (+326 more)
norwegian-geotechnical-institute/geoinquire-va2-34-2/latest-report/: report.html  report.md  report_for_pdf.html
