[tool.poetry]
name = "Geo-INQUIRE-LandslideHazard"
version = "0.1.0"
description = "\"virtual enviroment for Geo-Inquire Landslide Hazard tool\""
authors = ["\"RMB\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
affine = "==2.3.1"
attrs = "==22.1.0"
certifi = "==2022.9.24"
click = "==8.1.3"
click-plugins = "==1.1.1"
cligj = "==0.7.2"
numpy = "==1.23.4"
pyparsing = "==3.0.9"
rasterio = "==1.3.3"
snuggs = "==1.4.7"
rioxarray = "^0.17.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
